--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dr/sso",
+    "name": "hotarunohikari/sso",
     "description": "single sign on",
     "type": "library",
     "license": "MIT",
