--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hotarunohikari/sso",
     "description": "single sign on",
-    "type": "library",
+    "type": "composer",
     "license": "MIT",
     "authors": [
         {
@@ -9,7 +9,7 @@
             "email": "machigaisagashi@163.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=7.0.0"
 	},
