--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hotarunohikari/dr-sso",
     "description": "single sign on",
-    "type": "composer",
+    "type": "dr",
     "license": "MIT",
     "authors": [
         {
@@ -11,7 +11,11 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.0.0",
+		"ext-json": "*",
+        "ext-mbstring": "*",
+        "ext-bcmath": "*",
+        "topthink/framework": "5.0.*"
 	},
 	"autoload": {
         "psr-4": {
