--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
             "sso": "src/config.php"
         },
 		"branch-alias": {
-            "dev-master": "1.0.0-dev"
+            "dev-master": "1.0.x-dev"
         }
     }
 }
