--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
 		"ext-json": "*",
         "ext-mbstring": "*",
         "ext-bcmath": "*",
+		"topthink/think-installer":"1.0.*",
         "topthink/framework": "5.0.*"
 	},
 	"autoload": {
