--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
             "email": "machigaisagashi@163.com"
         }
     ],
+    "minimum-stability": "stable",
     "require": {
         "php": ">=7.0.0",
 		"ext-json": "*",
