--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"ext-json": "*",
         "ext-mbstring": "*",
         "ext-bcmath": "*",
-        "topthink/framework": "^5.0"
+		"topthink/think-installer":">=1.0.0",
+		"topthink/framework": "^5.0"
 	},
 	"autoload": {
         "psr-4": {
