--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "hotarunohikari/dr-sso",
     "description": "for single sign on",
+    "type": "dr-composer",
     "license": "MIT",
     "authors": [
         {
